--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ random
 scipy == 1.7.0
 seaborn == 0.12.1
 shap == 0.41.0
-sklearn == 1.1.3
+sklearn == 1.3.0
 umap == 0.5.3
+PyTorch 1.13.1
 xgboost == 1.7.4
